@@ -107,7 +107,7 @@
             <string> px</string>
            </property>
            <property name="minimum">
-            <number>1</number>
+            <number>-1</number>
            </property>
            <property name="maximum">
             <number>1024</number>
