@@ -6,6 +6,7 @@ opensesame (3.0.3a1-ubuntu1) wiley; urgency=medium
     - Warn on missing `__end__` statements in OpenSesame script (#364) 
     - Don't be greedy when parsing YAML front matter (#369)
     - Fix external_runner (#371)
+    - Improve handling of variably defined font and sketchpad element settings (#372)
 
  -- Sebastiaan Mathot <sebastiaan@mantis>  Sat, 07 Nov 2015 16:51:44 +0100
 
